Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89219

qtopcua build fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.0.1
    • 6.0.0
    • OpcUA
    • None

    Description

      Packaging qtopcua 6.0.0 for openSUSE is currently impossible due to a build error in both dev and the 6.0.0 tag.

      [73/186] Building CXX object src/opcua/CMakeFiles/OpcUa.dir/x509/openssl_symbols.cpp.o 
      FAILED: src/opcua/CMakeFiles/OpcUa.dir/x509/openssl_symbols.cpp.o  
      /usr/bin/clang++ -DOpcUa_EXPORTS -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_OPCUA_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATE
      D_BEFORE=0x050000 -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_USE_QSTRINGBUILDER -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -Isrc/opc
      ua/OpcUa_autogen/include -Iinclude -Iinclude/QtOpcUa -I../src/opcua -Isrc/opcua -Iinclude/QtOpcUa/6.0.0 -Iinclude/QtOpcUa/6.0.0/QtOpcUa -isystem /usr/include/qt6/QtCore -isystem /usr/include/qt6 -i
      system /usr/lib64/qt6/mkspecs/linux-g++ -isystem /usr/include/qt6/QtNetwork -isystem /usr/include/qt6/QtCore/6.0.0 -isystem /usr/include/qt6/QtCore/6.0.0/QtCore -isystem /usr/include/qt6/QtNetwork/
      6.0.0 -isystem /usr/include/qt6/QtNetwork/6.0.0/QtNetwork -Wall -Wextra -Wmissing-include-dirs -Qunused-arguments -fcolor-diagnostics -g -DNDEBUG -O2 -fPIC -fvisibility=hidden -fvisibility-inlines-
      hidden -Wall -Wextra -fno-exceptions -pthread -Wsuggest-override -std=c++17 -MD -MT src/opcua/CMakeFiles/OpcUa.dir/x509/openssl_symbols.cpp.o -MF src/opcua/CMakeFiles/OpcUa.dir/x509/openssl_symbols
      .cpp.o.d -o src/opcua/CMakeFiles/OpcUa.dir/x509/openssl_symbols.cpp.o -c ../src/opcua/x509/openssl_symbols.cpp 
      ../src/opcua/x509/openssl_symbols.cpp:276:18: error: no matching function for call to 'BN_set_word' 
      DEFINEFUNC2(int, BN_set_word, const BIGNUM *a, a, BN_ULONG w, w, return 0, return) 
                       ^~~~~~~~~~~ 
      ../src/opcua/x509/openssl_symbols_p.h:217:40: note: expanded from macro 'DEFINEFUNC2'                                                                                                                 
          ret q_##func(arg1, arg2) { funcret func(a, b); } 
                                             ^~~~ 
      /usr/include/openssl/bn.h:271:5: note: candidate function not viable: 1st argument ('const BIGNUM *' (aka 'const bignum_st *')) would lose const qualifier                                            
      int BN_set_word(BIGNUM *a, BN_ULONG w); 
          ^ 
      ../src/opcua/x509/openssl_symbols.cpp:342:18: error: no matching function for call to 'PEM_write_bio_PKCS8PrivateKey'                                                                                 
      DEFINEFUNC7(int, PEM_write_bio_PKCS8PrivateKey, BIO *a, a, EVP_PKEY *b, b, const EVP_CIPHER *c, c, unsigned char *d, d, int e, e, pem_password_cb *f, f, void *g, g, return 0, return) 
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
      ../src/opcua/x509/openssl_symbols_p.h:237:70: note: expanded from macro 'DEFINEFUNC7'                                                                                                                 
          ret q_##func(arg1, arg2, arg3, arg4, arg5, arg6, arg7) { funcret func(a, b, c, d, e, f, g); } 
                                                                           ^~~~ 
      /usr/include/openssl/pem.h:329:5: note: candidate function not viable: no known conversion from 'unsigned char *' to 'char *' for 4th argument                                                        
      int PEM_write_bio_PKCS8PrivateKey(BIO *, EVP_PKEY *, const EVP_CIPHER *, 
          ^ 
      2 errors generated.

                                                                                                                                                                                       

      CMake log attached

       

      Attachments

        1. build.patch
          4 kB
        2. qtopcupa_cmake.txt
          3 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              fmeerkoetter Frank Meerkötter
              cgiboudeaux Christophe Marin
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes