Fix: openssl_symbols error

adapt function signature according to upstream openssl headers.
fix build issues according to const correctness.

Task-number: QTBUG-89219
Change-Id: I0b101f07d5a8922a5f42be8802d48df854472b25
Reviewed-by: Frank Meerkoetter <frank.meerkoetter@basyskom.com>